--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="script.js" defer></script>
     <title>Chat Application</title>
-    <link rel="icon" href="static/icon.svg" />
+    <link rel="icon" href="static/svg/icon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet" />
@@ -16,12 +16,12 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="static/icon.svg" alt="Application Logo" />
+                    <img src="static/svg/icon.svg" alt="Application Logo" />
                     <p>Chat Application</p>
                 </div>
-                <button class="hamburger" aria-label="Menu"><img src="static/hamburger-menu.svg" alt=""></button>
+                <button class="hamburger" aria-label="Menu"><img src="static/svg/hamburger-menu.svg" alt=""></button>
                 <div id="menu-wrapper">
-                    <button class="menu-close"><img src="static/close-icon.svg" alt=""></button>
+                    <button class="menu-close"><img src="static/svg/close-icon.svg" alt=""></button>
                 </div>                  
                 <ul class="menu">
                     <li><a href="#">Demos</a></li>
@@ -46,9 +46,9 @@
                     </aside>
                     <aside>
                         <div class="photos">
-                            <img src="static/photo1.png" alt="Profile photo" />
-                            <img src="static/photo2.png" alt="Profile photo" />
-                            <img src="static/photo2.png" alt="Profile photo" />
+                            <img src="static/png/photo1.png" alt="Profile photo" />
+                            <img src="static/png/photo2.png" alt="Profile photo" />
+                            <img src="static/png/photo2.png" alt="Profile photo" />
                         </div>
                         <div>
                             <p>2,291</p>
@@ -62,20 +62,20 @@
                 </article>
                 <article id="article-2">
                     <div>
-                        <img src="static/image-femme-1.png" alt="Woman looking at her phone" />
+                        <img src="static/png/image-femme-1.png" alt="Woman looking at her phone" />
                         <div></div>
                         <div></div>
                     </div>
                     <aside>
                         <div>
-                            <img src="static/photo2.png" alt="Profile photo" />
+                            <img src="static/png/photo2.png" alt="Profile photo" />
                             <p>Eli Json</p>
                         </div>
                         <p>Great software that allows you to chat from any place at any time without any interruption.</p>
                     </aside>
                     <aside>
                         <div>
-                            <img src="static/photo1.png" alt="Profile photo" />
+                            <img src="static/png/photo1.png" alt="Profile photo" />
                             <p>Eli Json</p>
                         </div>
                         <p>Great software that allows you to chat from any place at any time without any interruption.</p>
@@ -89,28 +89,28 @@
             <article>
                 <h2>Features for a better experience</h2>
                 <div id="card-container">
-                    <card-component icon="static/camera-icon.svg" title="Video messaging" text="This software is very easy for you to manage you can use it as you wish."></card-component>
-                    <card-component icon="static/wifi-icon.svg" title="Keep safe & private" text="This software is very easy for you to manage you can use it as you wish."></card-component>
-                    <card-component icon="static/timer-icon.svg" title="Save you time" text="This software is very easy for you to manage you can use it as you wish."></card-component>
+                    <card-component icon="static/svg/camera-icon.svg" title="Video messaging" text="This software is very easy for you to manage you can use it as you wish."></card-component>
+                    <card-component icon="static/svg/wifi-icon.svg" title="Keep safe & private" text="This software is very easy for you to manage you can use it as you wish."></card-component>
+                    <card-component icon="static/svg/timer-icon.svg" title="Save you time" text="This software is very easy for you to manage you can use it as you wish."></card-component>
                 </div>
             </article>
         </section>
         <section>
             <article>
                 <div>
-                    <img src="static/image-femme-2.png" alt="Woman in video call"  />
+                    <img src="static/png/image-femme-2.png" alt="Woman in video call"  />
                     <div id="bottom-image">
                         <div>
                             <div>
-                                <img src="static/repeate-icon.svg" alt="Repeat icon" />
-                                <img src="static/white-camera-icon.svg" alt="Camera icon" />
+                                <img src="static/svg/repeate-icon.svg" alt="Repeat icon" />
+                                <img src="static/svg/white-camera-icon.svg" alt="Camera icon" />
                             </div>
                             <div>
-                                <img src="static/call-icon.svg" alt="Call icon" />
+                                <img src="static/svg/call-icon.svg" alt="Call icon" />
                             </div>
                         </div>
                         <div>
-                            <img src="static/like-icon.svg" alt="Like icon" />
+                            <img src="static/svg/like-icon.svg" alt="Like icon" />
                         </div>
                     </div>
                 </div>
@@ -127,12 +127,12 @@
                     <p>Great software that allows you to chat from any place at any time without any interruption.</p>
                     <my-button text="Start chatting now"></my-button>
                 </div>
-                <img src="static/mockup1.png" alt="Mockup"  />
+                <img src="static/png/mockup1.png" alt="Mockup"  />
             </article>
         </section>
         <section>
             <article>
-                <img src="static/mockup2.png" alt="Mockup" width="460px" />
+                <img src="static/png/mockup2.png" alt="Mockup" width="460px" />
                 <div>
                     <h1>Get direct orders from your customers</h1>
                     <p>Great software that allows you to chat from any place at any time without any interruption.</p>
@@ -156,7 +156,7 @@
                     <div>
                         <p>“The best UI kit for developers. So easy to implement and publish.”</p>
                         <div>
-                            <img src="static/photo2.png" alt="Profile photo" />
+                            <img src="static/png/photo2.png" alt="Profile photo" />
                             <div>
                                 <p>Eli Json</p>
                                 <p>Medical assistant</p>
@@ -166,7 +166,7 @@
                     <div>
                         <p>“Rareblocks helps you optimize for engagement.”</p>
                         <div>
-                            <img src="static/photo1.png" alt="Profile photo" />
+                            <img src="static/png/photo1.png" alt="Profile photo" />
                             <div>
                                 <p>Eli Json</p>
                                 <p>Medical assistant</p>
@@ -186,7 +186,7 @@
             <div>
                 <nav>
                     <div class="logo">
-                        <img src="static/icon.svg" alt="Application Logo" />
+                        <img src="static/svg/icon.svg" alt="Application Logo" />
                         <p>Chat Application</p>
                     </div>
                     <ul class="menu">
@@ -197,11 +197,11 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                     <ul class="network">
-                        <li><a href="#"><img src="static/google-icon.svg" alt="Google"></a></li>
-                        <li><a href="#"><img src="static/framer-icon.svg" alt="Framer"></a></li>
-                        <li><a href="#"><img src="static/facebook-icon.svg" alt="Facebook"></a></li>
-                        <li><a href="#"><img src="static/whatsapp-icon.svg" alt="WhatsApp"></a></li>
-                        <li><a href="#"><img src="static/youtube-icon.svg" alt="YouTube"></a></li>
+                        <li><a href="#"><img src="static/svg/google-icon.svg" alt="Google"></a></li>
+                        <li><a href="#"><img src="static/svg/framer-icon.svg" alt="Framer"></a></li>
+                        <li><a href="#"><img src="static/svg/facebook-icon.svg" alt="Facebook"></a></li>
+                        <li><a href="#"><img src="static/svg/whatsapp-icon.svg" alt="WhatsApp"></a></li>
+                        <li><a href="#"><img src="static/svg/youtube-icon.svg" alt="YouTube"></a></li>
                     </ul>
                 </nav>
                 <div></div>
