set the menu and counter animation

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <img src="static/png/photo2.png" alt="Profile photo" />
                         </div>
                         <div>
-                            <p>2,291</p>
+                            <p id="count" data-target="2291">0</p>
                             <p>Happy customers</p>
                         </div>
                         <div>
