mini css optimization

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       name="description"
       content="Join our chat application for seamless, secure communication available 24/7 on all your devices."
     />
+    <meta
+      name="keywords"
+      content="chat application, secure communication, messaging, customer service, live chat, online chat, 24/7 communication"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <script src="script.js" defer></script>
     <title>Chat Application</title>
@@ -19,7 +23,6 @@
     />
   </head>
   <body>
-    <div id="container">
       <header>
         <nav role="navigation">
           <div class="logo">
@@ -46,9 +49,8 @@
             <my-button role="button" text="Get started free"></my-button>
           </div>
         </nav>
-      </header>
-      <main>
-        <section id="section-1" id>
+      <div>
+        <section id="section-1">
           <article id="article-1">
             <aside>
               <h1>
@@ -98,31 +100,31 @@
               />
               <div></div>
               <div></div>
+              <aside>
+                <div>
+                  <img src="static/png/photo2.png" alt="Profile photo" />
+                  <p>Eli Json</p>
+                </div>
+                <p>
+                  Great software that allows you to chat from any place at any
+                  time without any interruption.
+                </p>
+              </aside>
+              <aside>
+                <div>
+                  <img src="static/png/photo1.png" alt="Profile photo" />
+                  <p>Eli Json</p>
+                </div>
+                <p>
+                  Great software that allows you to chat from any place at any
+                  time without any interruption.
+                </p>
+              </aside>
             </div>
-            <aside>
-              <div>
-                <img src="static/png/photo2.png" alt="Profile photo" />
-                <p>Eli Json</p>
-              </div>
-              <p>
-                Great software that allows you to chat from any place at any
-                time without any interruption.
-              </p>
-            </aside>
-            <aside>
-              <div>
-                <img src="static/png/photo1.png" alt="Profile photo" />
-                <p>Eli Json</p>
-              </div>
-              <p>
-                Great software that allows you to chat from any place at any
-                time without any interruption.
-              </p>
-            </aside>
           </article>
         </section>
-      </main>
-    </div>
+      </div>
+    </header>
     <main id="page-content">
       <section id="page">
         <article>
