--- a/login.html
+++ b/login.html
@@ -9,32 +9,37 @@
       rel="stylesheet"
     />
     <style>
+
       a {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         font-family: "Roboto Slab";
+        font-size: 2rem;
         height: 100vh;
         text-decoration: none;
         color: black;
+        text-align: center;
+        font-weight: 600;
       }
 
-      h2 {
-        font-family: "Inter";
+      @media (max-width: 600px) {
+        img {
+            width: 90%;
+        }
       }
     </style>
   </head>
 
   <body>
     <a href="index.html">
-      <h1>This page will soon allow you to discover our application</h1>
+      <p>This page will soon allow you to discover our application</p>
       <img
-        src="/static/png/illustration.png"
+        src="static/png/illustration.png"
         alt="illustration du site"
         width="500px"
       />
-      <h2>Our site</h2>
     </a>
   </body>
 </html>
