--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           />
         </article>
       </section>
-      <section>
+      <section id="exemple">
         <article>
           <img
             src="static/png/mockup2.png"
@@ -260,7 +260,7 @@
           </div>
         </article>
       </section>
-      <section>
+      <section id="appli">
         <article>
           <h2>
             Ready to grow your business? Start with our application, become
@@ -269,58 +269,59 @@
           <my-button role="button" text="Start chatting now"></my-button>
         </article>
       </section>
-      <footer id="contact">
+      
+    </main>
+    <footer id="contact">
+      <div>
+        <nav>
+          <div class="logo">
+            <img src="static/svg/icon.svg" alt="logo application" />
+            <p>Chat Application</p>
+          </div>
+          <ul class="menu">
+            <li><a href="#demo">Demos</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#page">Pages</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+          <ul class="network">
+            <li>
+              <a href="#"
+                ><img src="static/svg/google-icon.svg" alt="Google"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="static/svg/framer-icon.svg" alt="Framer"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="static/svg/facebook-icon.svg" alt="Facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="static/svg/whatsapp-icon.svg" alt="WhatsApp"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="static/svg/youtube-icon.svg" alt="YouTube"
+              /></a>
+            </li>
+          </ul>
+        </nav>
+        <div></div>
         <div>
-          <nav>
-            <div class="logo">
-              <img src="static/svg/icon.svg" alt="logo application" />
-              <p>Chat Application</p>
-            </div>
-            <ul class="menu">
-              <li><a href="#demo">Demos</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#blog">Blog</a></li>
-              <li><a href="#page">Pages</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-            <ul class="network">
-              <li>
-                <a href="#"
-                  ><img src="static/svg/google-icon.svg" alt="Google"
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="static/svg/framer-icon.svg" alt="Framer"
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="static/svg/facebook-icon.svg" alt="Facebook"
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="static/svg/whatsapp-icon.svg" alt="WhatsApp"
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="static/svg/youtube-icon.svg" alt="YouTube"
-                /></a>
-              </li>
-            </ul>
-          </nav>
-          <div></div>
+          <p>Copyright 2021, all rights reserved</p>
           <div>
-            <p>Copyright 2021, all rights reserved</p>
-            <div>
-              <p>Privacy policy</p>
-              <p>Terms & conditions</p>
-            </div>
+            <p>Privacy policy</p>
+            <p>Terms & conditions</p>
           </div>
         </div>
-      </footer>
-    </main>
+      </div>
+    </footer>
   </body>
 </html>
